--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Symfony2. PHPUnit</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="author" content="Vadim Kharitonov">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -71,7 +70,7 @@ $ chmod +x phpunit.phar
 
 					<section>
 						<h2>1.3 Composer</h2>
-						<p><code data-trim contenteditable>$ ./composer.phar require 'phpunit/phpunit=4.0.*'</code></p>
+						<p><code data-trim contenteditable>$ ./composer.phar require 'phpunit/phpunit=4.1.*'</code></p>
 					</section>
 					
 					<section>
